feature/allure-xunit-support (#10)
* finished

* fixes

* fixes

* allure results path

Co-authored-by: Aleksandr Petrovskiy <aepetrovskiy@inno.tech>

--- a/.gitignore
+++ b/.gitignore
@@ -701,3 +701,6 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/fsharp,csharp,visualstudiocode,visualstudio,rider,monodevelop,powershell
 
 .idea/**/
+
+allure-results/**
+report/**
