--- a/unit-testing/SomeLibTests/SomeLibTests.fsproj
+++ b/unit-testing/SomeLibTests/SomeLibTests.fsproj
@@ -12,13 +12,25 @@
   <ItemGroup>
     <Compile Include="UnitTest1.fs" />
     <Compile Include="FunctionsTest.fs" />
+    <Content Include="allureConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Allure.Commons" Version="3.5.0.73" />
+    <PackageReference Include="Allure.NUnit" Version="2.9.2-preview.1" />
+    <PackageReference Include="Allure.XUnit" Version="2.0.1" />
+    <PackageReference Include="Allure.Xunit.StepExtensions" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
