--- a/unit-testing/SimpleLibxUnitTests/SimpleLibxUnitTests.fsproj
+++ b/unit-testing/SimpleLibxUnitTests/SimpleLibxUnitTests.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
@@ -10,21 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="UnitTest1.fs" />
     <Compile Include="FunctionsTest.fs" />
     <Content Include="allureConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Compile Include="SingleTests.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Allure.Commons" Version="3.5.0.73" />
-    <PackageReference Include="Allure.NUnit" Version="2.9.2-preview.1" />
     <PackageReference Include="Allure.XUnit" Version="2.0.1" />
     <PackageReference Include="Allure.Xunit.StepExtensions" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -34,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SomeLib\SomeLib.fsproj" />
+    <ProjectReference Include="..\SimpleLib\SimpleLib.fsproj" />
   </ItemGroup>
 
 </Project>
