--- a/unit-testing/SimpleLibNUnitTests/SimpleLibNUnitTests.fsproj
+++ b/unit-testing/SimpleLibNUnitTests/SimpleLibNUnitTests.fsproj
@@ -27,6 +27,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Shouldly" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleLib\SimpleLib.fsproj" />
